Increase mobile font-sizes to prevent auto-zoom in Safari (#3652)
* Increase default mobile font-size to 16px, specifically to prevent auto-zoom in Safari on inputs
* Increase default font / toolbar sizes to accomodate
* Add new mobile-only CSS vars to allow apps to override if they need

---------

Co-authored-by: Anselm McClain <atm@xh.io>

--- a/kit/onsen/styles.scss
+++ b/kit/onsen/styles.scss
@@ -4,9 +4,10 @@
 .xh-input {
   input,
   textarea {
-    font-size: var(--xh-font-size);
     font-family: var(--xh-font-family);
+    font-size: var(--xh-mobile-input-font-size-px);
     font-weight: 400;
+
     color: var(--xh-text-color);
     border: none !important;
     outline: none !important;
@@ -19,7 +20,7 @@
   }
 
   &:not(.xh-input-label):not(.xh-button-group):not(.xh-switch-input):not(.xh-check-box) {
-    font-size: 14px;
+    font-size: var(--xh-mobile-input-font-size-px);
     border: var(--xh-border-solid);
     border-radius: var(--xh-border-radius-px);
 
