--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -378,7 +378,13 @@ body {
   --xh-font-size-small-px: calc(var(--xh-font-size-small) * 1px);
 
   &.xh-mobile {
-    --xh-font-size: var(--font-size, 15);
+    --xh-font-size: var(--font-size, 16);
+    // Important: Do not override to be less than 16px as this will make Safari auto-zoom on focus
+    --xh-mobile-input-font-size: var(--mobile-input-font-size, var(--xh-font-size));
+    --xh-mobile-input-font-size-px: calc(var(--xh-mobile-input-font-size) * 1px);
+    --xh-mobile-input-height-px: var(--mobile-input-height-px, 34px);
+    --xh-mobile-input-label-font-size: var(--mobile-input-label-font-size, var(--xh-font-size));
+    --xh-mobile-input-label-font-size-px: calc(var(--xh-mobile-input-label-font-size) * 1px);
   }
 
 
@@ -762,7 +768,8 @@ body {
   }
 
   &.xh-mobile {
-    --xh-tbar-min-size: var(--tbar-min-size, 40);
+    // Larger toolbars on mobile to account for relatively larger inputs that can be nested within them.
+    --xh-tbar-min-size: var(--tbar-min-size, 44);
     --xh-tbar-min-size-px: calc(var(--xh-tbar-min-size) * 1px);
 
     &.xh-dark {
