Move mobile AboutDialog to fullscreen DialogPanel
+ Minor fix to versionBar button sizing

--- a/mobile/appcontainer/AboutDialog.scss
+++ b/mobile/appcontainer/AboutDialog.scss
@@ -1,6 +1,4 @@
-.xh-about-dialog .xh-dialog__inner {
-  padding: 0;
-
+.xh-about-dialog {
   table {
     width: 100%;
     border-collapse: collapse;
