--- a/mobile/appcontainer/VersionBar.scss
+++ b/mobile/appcontainer/VersionBar.scss
@@ -1,7 +1,7 @@
 .xh-version-bar {
   background-color: var(--xh-gray-dark);
   color: white;
-  font-size: 12px;
+  font-size: var(--xh-font-size-small-px);
   padding: var(--xh-pad-half-px);
 
   &--development {
@@ -30,14 +30,10 @@
   }
 
   .xh-button {
-    display: flex;
-    padding: 0 10px;
     background: none !important;
+    color: white !important;
+    font-size: var(--xh-font-size-small-px);
     height: 14px;
-
-    svg {
-      color: white;
-      cursor: pointer;
-    }
+    padding: 0 10px;
   }
 }
