--- a/mobile/cmp/grid/impl/ColChooser.scss
+++ b/mobile/cmp/grid/impl/ColChooser.scss
@@ -36,14 +36,15 @@
     align-items: center;
     border-bottom: var(--xh-border-solid);
     background-color: var(--xh-bg);
-    height: 35px;
     flex-shrink: 0;
 
     &__grabber {
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 30px;
+      // Drives overall height of row - sync'd with AgGrid.ROW_HEIGHTS_MOBILE.large, less padding,
+      // to provide some consistent-ish sizing across this + ZoneMapper (which uses an actual grid)
+      height: 34px;
       width: 40px;
       text-align: center;
       color: var(--xh-text-color-muted);
