--- a/desktop/cmp/modalsupport/ModalSupport.scss
+++ b/desktop/cmp/modalsupport/ModalSupport.scss
@@ -5,5 +5,9 @@
     width: auto;
     // Zero margin to allow for fullscreen modals @ 100vw/vh
     margin: 0;
+
+    .xh-print-panel-button {
+      display: none;
+    }
   }
 }
