Rationalize CSS classnames applied to AppMenu
+ Desktop had `xh-app-menu` applied to the button itself, with no class available to target the menu or its wrapping popover.
+ Mobile had `xh-app-menu-button` for the button and applied `xh-app-menu` to the popover, without adding a class to the menu.
+ Rationalize to always apply `xh-app-menu-button`, `xh-app-menu-popover`, and `xh-app-menu` on the expected elements.
+ Add new mobile `menuButton.menuClassName` prop.
+ Fixes #3684

--- a/desktop/cmp/appbar/AppBar.scss
+++ b/desktop/cmp/appbar/AppBar.scss
@@ -7,7 +7,7 @@
 
 .xh-appbar {
   // Menu button might be on left or right of appBar - add right margin when on left only.
-  .xh-app-menu:first-child {
+  .xh-app-menu-button:first-child {
     margin-right: var(--xh-pad-px);
   }
 
