Mobile `TabContainer` now flexes properly within flexbox containers.

--- a/mobile/cmp/tab/impl/Tabs.scss
+++ b/mobile/cmp/tab/impl/Tabs.scss
@@ -26,6 +26,9 @@
 }
 
 .xh-tab-container {
+  position: relative;
+  flex: auto;
+
   &--top .tabbar {
     border-bottom: var(--xh-border-solid);
   }
