--- a/cmp/layout/Viewport.scss
+++ b/cmp/layout/Viewport.scss
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100svw;
-  height: 100svh;
+  height: 100dvh;
 }
 
 // On mobile, this works in concert with modification to the viewport meta tag within AppContainerModel
