--- a/mobile/cmp/panel/DialogPanel.scss
+++ b/mobile/cmp/panel/DialogPanel.scss
@@ -1,12 +1,21 @@
 // Sizing below designed to ensure that DialogPanel occupies the entire (safe) area of the screen.
 .xh-dialog-panel {
   & > .dialog {
+    /* stylelint-disable */
+    width: 100vw;
     width: 100svw;
+    max-height: 100vh !important;
     max-height: 100dvh !important;
+    /* stylelint-enable */
 
     .dialog-container {
+      /* stylelint-disable */
+      height: 100vh;
       height: 100dvh;
+      max-width: 100vw !important;
       max-width: 100svw !important;
+      /* stylelint-enable */
+
       border: 0 !important;
 
       & > .xh-panel {
