--- a/mobile/cmp/panel/DialogPanel.scss
+++ b/mobile/cmp/panel/DialogPanel.scss
@@ -2,17 +2,21 @@
 .xh-dialog-panel {
   & > .dialog {
     // Fallbacks for secure client browsers that don't support dynamic viewport units.
+    /* stylelint-disable consecutive-duplicates */
     width: 100vw;
     width: 100svw;
     max-height: 100vh !important;
     max-height: 100dvh !important;
+    /* stylelint-enable consecutive-duplicates */
 
     .dialog-container {
       // Fallbacks for secure client browsers that don't support dynamic viewport units.
+      /* stylelint-disable consecutive-duplicates */
       height: 100vh;
       height: 100dvh;
       max-width: 100vw !important;
       max-width: 100svw !important;
+      /* stylelint-enable consecutive-duplicates */
 
       border: 0 !important;
 
