Add fallback for browsers that don't support dynamic viewport units. (#3719)
* Add 100vw/vh above svw/dvh to test on BB access

* Apply fix to DialogPanel, refactor viewport

* Add comments

* Turn off stylelint duplicate rules

* Update Changelog entry

--- a/cmp/layout/Viewport.scss
+++ b/cmp/layout/Viewport.scss
@@ -2,8 +2,13 @@
   background-color: var(--xh-viewport-bg);
   top: 0;
   left: 0;
+  // Fallbacks for secure client browsers that don't support dynamic viewport units.
+  /* stylelint-disable consecutive-duplicates */
+  width: 100vw;
   width: 100svw;
+  height: 100vh;
   height: 100dvh;
+  /* stylelint-enable consecutive-duplicates */
 }
 
 // On mobile, this works in concert with modification to the viewport meta tag within AppContainerModel
