--- a/cmp/badge/Badge.scss
+++ b/cmp/badge/Badge.scss
@@ -10,16 +10,16 @@
   justify-content: center;
   align-items: center;
   align-self: center;
-  font-size: 0.75em;
+  font-size: var(--xh-badge-font-size);
   font-weight: bold;
-  border-radius: 4px;
+  border-radius: var(--xh-badge-border-radius);
   margin-left: 5px;
-  padding: 0 4px;
-  height: 1.6em;
+  padding: var(--xh-badge-padding);
+  height: var(--xh-badge-height);
   width: fit-content;
-  min-width: 15px;
-  background-color: var(--xh-blue-gray);
-  color: white;
+  min-width: var(--xh-badge-min-width);
+  background-color: var(--xh-badge-bg);
+  color: var(--xh-badge-text-color);
 
   &--compact {
     font-size: 0.5em;
