--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -254,6 +254,16 @@ body {
     --xh-bg-highlight: var(--bg-highlight, hsl(200, 50%, 27%));
   }
 
+  //-----------------------------------------
+  // Badges
+  //-----------------------------------------
+  --xh-badge-bg: var(--badge-bg, var(--xh-blue-gray));
+  --xh-badge-border-radius: var(--badge-border-radius, var(--xh-border-radius-px));
+  --xh-badge-font-size: var(--badge-font-size, 0.75em);
+  --xh-badge-height: var(--badge-height, 1.6em);
+  --xh-badge-min-width: var(--badge-min-width, 15px);
+  --xh-badge-padding: var(--badge-padding, #{0 4px});
+  --xh-badge-text-color: var(--badge-text-color, white);
 
   //------------------------
   // Borders
