--- a/desktop/appcontainer/VersionBar.scss
+++ b/desktop/appcontainer/VersionBar.scss
@@ -6,8 +6,11 @@
  */
 
 .xh-version-bar {
+  align-items: center;
   background-color: var(--xh-gray-dark);
   color: white;
+  flex: none;
+  justify-content: center;
   padding: var(--xh-pad-half-px);
 
   &--development {
@@ -33,6 +36,14 @@
 
   &--test {
     background-color: hsl(180, 100%, 25%);
+  }
+
+  &__spacer {
+    margin-left: var(--xh-pad-px);
+  }
+
+  &__instance {
+    cursor: pointer;
   }
 
   svg {
