Add `--xh-badge-font-weight` CSS var

--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -260,6 +260,7 @@ body {
   --xh-badge-bg: var(--badge-bg, var(--xh-blue-gray));
   --xh-badge-border-radius: var(--badge-border-radius, var(--xh-border-radius-px));
   --xh-badge-font-size: var(--badge-font-size, 0.75em);
+  --xh-badge-font-weight: var(--badge-font-weight, bold);
   --xh-badge-height: var(--badge-height, 1.6em);
   --xh-badge-min-width: var(--badge-min-width, 15px);
   --xh-badge-padding: var(--badge-padding, #{0 4px});
