--- a/cmp/badge/Badge.scss
+++ b/cmp/badge/Badge.scss
@@ -11,7 +11,7 @@
   align-items: center;
   align-self: center;
   font-size: var(--xh-badge-font-size);
-  font-weight: bold;
+  font-weight: var(--xh-badge-font-weight);
   border-radius: var(--xh-badge-border-radius);
   margin-left: 5px;
   padding: var(--xh-badge-padding);
