--- a/desktop/cmp/viewmanager/ViewManager.scss
+++ b/desktop/cmp/viewmanager/ViewManager.scss
@@ -26,6 +26,11 @@
         }
       }
     }
+
+    &__metadata {
+      color: var(--xh-text-color-muted);
+      font-size: var(--xh-font-size-small-px);
+    }
   }
 
   &__menu-item {
