--- a/admin/tabs/cluster/distobjects/DistributedObjects.scss
+++ b/admin/tabs/cluster/distobjects/DistributedObjects.scss
@@ -6,5 +6,9 @@
  */
 
 .xh-distributed-objects-row-has-break:not(.ag-row-selected) {
-  background-color: var(--xh-intent-warning) !important;
+  background-color: var(--xh-intent-danger-trans1) !important;
+}
+
+.xh-distributed-objects-cell-has-break {
+  background-color: var(--xh-intent-danger-trans1) !important;
 }
