--- a/admin/tabs/cluster/distobjects/DistributedObjects.scss
+++ b/admin/tabs/cluster/distobjects/DistributedObjects.scss
@@ -9,6 +9,14 @@
   background-color: var(--xh-intent-danger-trans1) !important;
 }
 
-.xh-distributed-objects-cell-has-break {
+.xh-distributed-objects-cell-danger {
   background-color: var(--xh-intent-danger-trans1) !important;
+}
+
+.xh-distributed-objects-cell-warning {
+  background-color: var(--xh-intent-warning-trans1) !important;
+}
+
+.xh-distributed-objects-cell-success {
+  background-color: var(--xh-intent-success-trans1) !important;
 }
