--- a/admin/tabs/cluster/distobjects/DistributedObjects.scss
+++ b/admin/tabs/cluster/distobjects/DistributedObjects.scss
@@ -20,3 +20,10 @@
 .xh-distributed-objects-cell-success {
   background-color: var(--xh-intent-success-trans1) !important;
 }
+
+.xh-distributed-objects-result-count {
+  align-items: center;
+  .xh-icon {
+    margin-right: 0.5em;
+  }
+}
