--- a/cmp/treemap/SplitTreeMap.scss
+++ b/cmp/treemap/SplitTreeMap.scss
@@ -36,6 +36,22 @@
     }
   }
 
+  &__splitter {
+    background-color: var(--xh-resizable-bg);
+
+    &--vertical {
+      height: 4px;
+      border-top: var(--xh-resizable-border-width-px) solid var(--xh-resizable-border-color);
+      border-bottom: var(--xh-resizable-border-width-px) solid var(--xh-resizable-border-color);
+    }
+
+    &--horizontal {
+      width: 4px;
+      border-left: var(--xh-resizable-border-width-px) solid var(--xh-resizable-border-color);
+      border-right: var(--xh-resizable-border-width-px) solid var(--xh-resizable-border-color);
+    }
+  }
+
   &__mask-holder {
     position: absolute;
     top: 0;
