Css to address message height in ticket https://github.com/xh/hoist-react/issues/3792

--- a/desktop/appcontainer/Message.scss
+++ b/desktop/appcontainer/Message.scss
@@ -8,3 +8,10 @@
 .xh-message .xh-form-field {
   margin: 0;
 }
+
+.xh-message {
+  max-height: 90vh;
+  .bp5-dialog-body {
+    overflow-y: auto;
+  }
+}
