--- a/desktop/cmp/grid/impl/filter/headerfilter/values/ValuesTab.scss
+++ b/desktop/cmp/grid/impl/filter/headerfilter/values/ValuesTab.scss
@@ -1,4 +1,17 @@
 .xh-values-filter-tab {
+  .store-filter-header {
+    padding: 5px 7px;
+    border-bottom: 1px solid var(--xh-grid-header-border-color);
+    row-gap: 5px;
+    .bp5-control-indicator {
+      font-size: 1em;
+    }
+    span {
+      font-size: var(--xh-grid-compact-header-font-size-px);
+      color: var(--xh-grid-header-text-color);
+    }
+  }
+
   &__hidden-values-message {
     display: flex;
     padding: var(--xh-pad-half-px);
