Option in About dialog to send client health report on-demand
- Fix to ensure mobile toasts are shown above fullscreen dialogs.
- Make `XH.clientHealthService.sendReport()` public, although comment as internal.
- Same with `XH.trackService.pushPendingAsync()`.
- Tweak to about table alignment on mobile.

--- a/kit/onsen/theme.scss
+++ b/kit/onsen/theme.scss
@@ -118,6 +118,11 @@ body.xh-app.xh-mobile {
     color: var(--xh-text-color);
   }
 
+  // Toast - ensure z-index exceeds dialogs
+  ons-toast {
+    z-index: 30001 !important;
+  }
+
   // Remove outlines
   .tabbar__button:focus {
     outline: none;
