--- a/mobile/appcontainer/AboutDialog.scss
+++ b/mobile/appcontainer/AboutDialog.scss
@@ -6,7 +6,7 @@
 
   th {
     text-align: right;
-    vertical-align: top;
+    vertical-align: middle;
     white-space: nowrap;
     background-color: var(--xh-bg-alt);
     border-bottom: var(--xh-border-solid);
