Checkpoint with DF editor form + VM persistence

--- a/admin/tabs/activity/tracking/ActivityTracking.scss
+++ b/admin/tabs/activity/tracking/ActivityTracking.scss
@@ -31,6 +31,24 @@
       margin-right: var(--xh-pad-half-px);
     }
   }
+
+  &__data-fields-editor {
+    width: 50vw;
+    min-width: 700px;
+    max-width: 1000px;
+    min-height: 200px;
+
+    &__row {
+      align-items: flex-start;
+      flex: none;
+      margin-left: 5px;
+      margin-right: 5px;
+
+      &:first-child {
+        margin-top: 5px;
+      }
+    }
+  }
 }
 
 .xh-admin-activity-detail {
