Admin col updates for consistency
- remove cols that got duped up in client tab
- use badge renderer consistently for these new id-ish things
- re-order touched col files to unscramble, make it easier to scan/find cols

--- a/admin/App.scss
+++ b/admin/App.scss
@@ -25,6 +25,12 @@
     height: 80vh;
     width: 80vw;
   }
+
+  .xh-badge-col {
+    --xh-badge-font-size: 0.9em;
+    background-color: var(--xh-intent-primary-darker);
+    font-family: var(--xh-font-family-mono);
+  }
 }
 
 .xh-units-label {
