Minor visual tweak to Admin Activity Tracking

--- a/admin/tabs/activity/tracking/ActivityTracking.scss
+++ b/admin/tabs/activity/tracking/ActivityTracking.scss
@@ -43,6 +43,7 @@
       flex: none;
       margin-left: 5px;
       margin-right: 5px;
+      gap: 5px;
 
       &:first-child {
         margin-top: 5px;
