Minor GroupingChooser fixes
- Avoid Blueprint console warning spam due to attempt to render empty popover - entire popover set to `!isOpen` if showing neither menu
- Style fix for fave button alignment when in compact tbar

--- a/desktop/cmp/grouping/GroupingChooser.scss
+++ b/desktop/cmp/grouping/GroupingChooser.scss
@@ -137,6 +137,10 @@
       color: var(--xh-text-color);
     }
 
+    .xh-toolbar--compact & {
+      height: 15px;
+    }
+
     // Matched to FilterChooser equivalent.
     & > .svg-inline--fa {
       width: 12px;
