Add a wrapper for FilterChooser which opens in an expanding popover.

--- a/desktop/cmp/filter/FilterChooser.scss
+++ b/desktop/cmp/filter/FilterChooser.scss
@@ -10,6 +10,11 @@
     display: flex;
     flex: 1;
   }
+
+  &__count {
+    margin: 7px 4px;
+    align-self: start;
+  }
 }
 
 .xh-filter-chooser-option {
