--- a/styles/XH.scss
+++ b/styles/XH.scss
@@ -96,6 +96,7 @@ body.xh-app {
   .xh-text-color-accent { color: var(--xh-text-color-accent); }
   .xh-text-color-muted { color: var(--xh-text-color-muted); }
   .xh-transparent { color: transparent; }
+  .xh-white { color: var(--xh-white); }
   .xh-yellow { color: var(--xh-yellow); }
   .xh-yellow-light { color: var(--xh-yellow-light); }
 
