Grid column filter values tab: Make select and add checkbox labels clickable + give them a pointer cursor.

--- a/desktop/cmp/grid/impl/filter/headerfilter/values/ValuesTab.scss
+++ b/desktop/cmp/grid/impl/filter/headerfilter/values/ValuesTab.scss
@@ -6,9 +6,10 @@
     .bp5-control-indicator {
       font-size: 1em;
     }
-    span {
+    label {
       font-size: var(--xh-grid-compact-header-font-size-px);
       color: var(--xh-grid-header-text-color);
+      cursor: pointer;
     }
   }
 
