--- a/desktop/appcontainer/VersionBar.scss
+++ b/desktop/appcontainer/VersionBar.scss
@@ -42,7 +42,8 @@
     margin-left: var(--xh-pad-px);
   }
 
-  &__uuid {
+  &__tabid {
+    margin-left: var(--xh-pad-px);
     cursor: pointer;
   }
 
