GroupingChooser internal layout tweak
- Split left/right layout 60/40 in favor of favorites sub-panel, which will have wider values by definition than the single-col editor

--- a/desktop/cmp/grouping/GroupingChooser.scss
+++ b/desktop/cmp/grouping/GroupingChooser.scss
@@ -34,8 +34,14 @@
     position: relative;
   }
 
-  &__editor {
-    flex: 1;
+  &-popover {
+    // 60/40 split in favor of favorites in left/right orientation
+    &--faves-right,
+    &--faves-left {
+      .xh-grouping-chooser__editor {
+        width: 40%;
+      }
+    }
   }
 
   &__list {
