Minor dependency updates
* @auth0/auth0-spa-js `2.1 → 2.3`
* @azure/msal-browser `4.12 → 4.16`
* filesize `6.4 → 11.0`
* mobx-react-lite `4.0 → 4.1`
* qs `6.13 → 6.14`
* react-markdown `9.0 → 10.1`
* regenerator-runtime `0.13 → 0.14`
* semver `7.6 → 7.7`
* short-unique-id `5.2 → 5.3`
* ua-parser-js `1.0 → 2.0`

Update to stylelint flagged a few deprecated CSS properties that have been adjusted. Note that prior usage of `overflow-x|y: overlay` in `TileFrame.scss` no longer appeared to be working as documented, even prior to this change.

--- a/cmp/error/ErrorMessage.scss
+++ b/cmp/error/ErrorMessage.scss
@@ -15,7 +15,7 @@
     border: 1px solid var(--xh-intent-danger);
     max-width: 50%;
     text-align: center;
-    word-break: break-word;
+    overflow-wrap: break-word;
 
     & > * {
       margin: 0 0 var(--xh-pad-px);
