Update Hoist's default Inter UI font to latest v4.1

--- a/styles/XH.scss
+++ b/styles/XH.scss
@@ -9,7 +9,7 @@
 @use 'helpers';
 @use '~inter-ui/variable' with (
   $inter-font-display: block,
-  $inter-font-path: '~inter-ui/Inter (web)'
+  $inter-font-path: '~inter-ui/variable'
 );
 
 @include variable.all;
