--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -374,7 +374,7 @@ body {
   //------------------------
   // Fonts
   //------------------------
-  --xh-font-family: var(--font-family, #{("Inter Var", system-ui, sans-serif)});
+  --xh-font-family: var(--font-family, #{("InterVariable", system-ui, sans-serif)});
   --xh-font-family-headings: var(--font-family-headings, var(--xh-font-family));
   --xh-font-family-mono: var(--font-family-mono, #{(Monaco, Consolas, monospace)});
 
