Minor dependency updates
* @auth0/auth0-spa-js `2.3 → 2.4`
* @azure/msal-browser `4.16 → 4.23`
* typescript `5.8 → 5.9`
* Run `yarn upgrade`

--- a/admin/differ/Differ.scss
+++ b/admin/differ/Differ.scss
@@ -39,7 +39,7 @@
       vertical-align: top;
       width: 290px;
       max-width: 290px;
-      word-wrap: break-word;
+      overflow-wrap: break-word;
 
       &.diff {
         color: var(--xh-green);
