--- a/admin/tabs/general/about/AboutPanel.scss
+++ b/admin/tabs/general/about/AboutPanel.scss
@@ -41,7 +41,7 @@
       max-width: 600px;
       min-width: 600px;
       padding: var(--xh-pad-half-px);
-      word-wrap: break-word;
+      overflow-wrap: break-word;
     }
   }
 
