--- a/desktop/cmp/tab/dynamic/DynamicTabSwitcher.scss
+++ b/desktop/cmp/tab/dynamic/DynamicTabSwitcher.scss
@@ -1,12 +1,19 @@
 .xh-dynamic-tab-switcher {
-  &__tabs {
-    display: flex;
-    flex-direction: row;
+  &:not(&--vertical) &__tabs {
     overflow-x: auto;
 
     .bp5-tab-list {
       column-gap: var(--xh-pad-double-px);
     }
+  }
+
+  &--vertical &__tabs {
+    overflow-y: auto;
+  }
+
+  &__tabs {
+    display: flex;
+    flex-direction: row;
 
     &::-webkit-scrollbar {
       display: none;
@@ -15,6 +22,11 @@
     &__tab {
       align-items: center;
       user-select: none;
+
+      .xh-dynamic-tab-switcher--vertical & {
+        min-height: fit-content;
+        width: 100%;
+      }
 
       &:not(&--active) {
         cursor: pointer;
