--- a/desktop/cmp/grid/impl/filter/headerfilter/values/ValuesTab.scss
+++ b/desktop/cmp/grid/impl/filter/headerfilter/values/ValuesTab.scss
@@ -11,7 +11,7 @@
       color: var(--xh-grid-header-text-color);
       cursor: pointer;
     }
-    .sortIcon {
+    .sort-icon {
       border-left: var(--xh-menu-border);
       padding-left: var(--xh-pad-half-px);
       color: var(--xh-grid-header-text-color);
