--- a/desktop/cmp/input/CodeInput.scss
+++ b/desktop/cmp/input/CodeInput.scss
@@ -52,7 +52,7 @@
     flex: 1;
 
     & > .cm-editor {
-      position: absolute;
+      position: absolute !important;
       top: 0;
       bottom: 0;
       left: 0;
